# bachelors-thesis

./: .gitignore  README.md
AKSHAT/: AKSHATPSO.py
AKSHAT/PSO/: PSO Algorithm.ipynb
code/: README.md  production_orders.py  pyproject.toml
code/schedule_generator/: poc_aco_local_search.py  poc_aco_v2.py  poc_aoc.py  poc_aoc_local_search.py  poc_aoc_v2.py
src/: production_orders.py  pyproject.toml
src/Akshat - PSO/PSO/: Main Problem in Notebook.ipynb  PSO Algorithm.ipynb  PSO-RESTART-Simple Example.ipynb
src/examples/: data_v1.xlsx  data_v1_large.xlsx  data_v1_single.xlsx
src/schedule_generator/: README.md  ant_colony_optimisation.py  grid_search.py  main.py  numba_numpy_functions.py  poc_aco_local_search.py  poc_aco_machine_assignment.py  poc_aco_main.py  poc_aco_v2.py
src/stable_schedule_generator/: README.md  ant_colony_optimisation.py  main.py
src/tests/: test_job_generation.py
