[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Albin Lindqvist <albin.lindqvist@hotmail.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pyomo = "^6.7.1"
pandas = "^2.2.1"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
