[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Albin Lindqvist <albin.lindqvist@hotmail.se>"]
readme = "README.md"
packages = [{include="src", from=".."}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
pyomo = "^6.7.1"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
networkx = "^3.3"
matplotlib = "^3.8.4"
pytest = "^8.2.0"
numba = "^0.59.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
